test/corpus/constants.txt
================
Constants
================

#define constant NUM = 0x420
#define constant HELLO_WORLD = 0x48656c6c6f2c20576f726c6421
#define constant FREE_STORAGE = FREE_STORAGE_POINTER()

---

(source_file
  (declaration
    (constant
      name: (identifier)
      value: (number)))
  (declaration
    (constant
      name: (identifier)
      value: (number)))
  (declaration
    (constant
      name: (identifier)
      value: (builtin_function))))

================
Constant Reference
================

#define constant OWNER = FREE_STORAGE_POINTER()

#define macro MAIN() = takes (0) returns (0) {
  [OWNER] sload
}


---

(source_file
 (declaration
  (constant
   (identifier)
   (builtin_function)))
 (declaration
  (macro
   (identifier)
   (number)
   (number)
   (macro_body
    (referenced_constant
     (identifier))
    (opcode)))))
