test/corpus/jump_labels.txt
================
Jump label References
================

#define macro TEST() = takes (0) returns (0) {
    success jumpi
    error jump
    label_one jumpi
    
    success:
        0x01 0x00 return
    
    error:
        0x00 0x00 revert
        
    label_one:
        0x42 0x00 mstore
}

---

(source_file
  (declaration
    (macro
      name: (identifier)
      takes_count: (number)
      returns_count: (number)
      (macro_body
        (jumpdest
          name: (identifier))
        (opcode)
        (jumpdest
          name: (identifier))
        (opcode)
        (jumpdest
          name: (identifier))
        (opcode)
        (jumpdest_label
          name: (identifier))
        (number)
        (number)
        (opcode)
        (jumpdest_label
          name: (identifier))
        (number)
        (number)
        (opcode)
        (jumpdest_label
          name: (identifier))
        (number)
        (number)
        (opcode)))))
